--- a/config.org
+++ b/config.org
@@ -1408,57 +1408,57 @@ ln -s ~/.local/share/go/bin/goimapnotify ~/.local/bin/
 #+end_src
 
 **** Rebuild mail index whilst using mu4e
-#+begin_src emacs-lisp (if not((executable-find "mu")) ":tangle no") :noweb-ref mu4e-conf
-  (defvar mu4e-reindex-request-file "/tmp/mu_reindex_now"
-    "Location of the reindex request, signaled by existance")
-  (defvar mu4e-reindex-request-min-seperation 5.0
-    "Don't refresh again until this many second have elapsed.
+#+begin_src emacs-lisp :noweb-ref mu4e-conf
+(defvar mu4e-reindex-request-file "/tmp/mu_reindex_now"
+  "Location of the reindex request, signaled by existance")
+(defvar mu4e-reindex-request-min-seperation 5.0
+  "Don't refresh again until this many second have elapsed.
 Prevents a series of redisplays from being called (when set to an appropriate value)")
 
-  (defvar mu4e-reindex-request--file-watcher nil)
-  (defvar mu4e-reindex-request--file-just-deleted nil)
-  (defvar mu4e-reindex-request--last-time 0)
+(defvar mu4e-reindex-request--file-watcher nil)
+(defvar mu4e-reindex-request--file-just-deleted nil)
+(defvar mu4e-reindex-request--last-time 0)
 
-  (defun mu4e-reindex-request--add-watcher ()
-    (setq mu4e-reindex-request--file-just-deleted nil)
-    (setq mu4e-reindex-request--file-watcher
-          (file-notify-add-watch mu4e-reindex-request-file
-                                 '(change)
-                                 #'mu4e-file-reindex-request)))
+(defun mu4e-reindex-request--add-watcher ()
+  (setq mu4e-reindex-request--file-just-deleted nil)
+  (setq mu4e-reindex-request--file-watcher
+        (file-notify-add-watch mu4e-reindex-request-file
+                               '(change)
+                               #'mu4e-file-reindex-request)))
 
-  (defadvice! mu4e-stop-watching-for-reindex-request ()
-    :after #'mu4e~proc-kill
-    (if mu4e-reindex-request--file-watcher
-        (file-notify-rm-watch mu4e-reindex-request--file-watcher)))
+(defadvice! mu4e-stop-watching-for-reindex-request ()
+  :after #'mu4e--server-kill
+  (if mu4e-reindex-request--file-watcher
+      (file-notify-rm-watch mu4e-reindex-request--file-watcher)))
 
-  (defadvice! mu4e-watch-for-reindex-request ()
-    :after #'mu4e~proc-start
-    (mu4e-stop-watching-for-reindex-request)
-    (when (file-exists-p mu4e-reindex-request-file)
-      (delete-file mu4e-reindex-request-file))
-    (mu4e-reindex-request--add-watcher))
+(defadvice! mu4e-watch-for-reindex-request ()
+  :after #'mu4e--server-start
+  (mu4e-stop-watching-for-reindex-request)
+  (when (file-exists-p mu4e-reindex-request-file)
+    (delete-file mu4e-reindex-request-file))
+  (mu4e-reindex-request--add-watcher))
 
-  (defun mu4e-file-reindex-request (event)
-    "Act based on the existance of `mu4e-reindex-request-file'"
-    (if mu4e-reindex-request--file-just-deleted
-        (mu4e-reindex-request--add-watcher)
-      (when (equal (nth 1 event) 'created)
-        (delete-file mu4e-reindex-request-file)
-        (setq mu4e-reindex-request--file-just-deleted t)
-        (mu4e-reindex-maybe t))))
+(defun mu4e-file-reindex-request (event)
+  "Act based on the existance of `mu4e-reindex-request-file'"
+  (if mu4e-reindex-request--file-just-deleted
+      (mu4e-reindex-request--add-watcher)
+    (when (equal (nth 1 event) 'created)
+      (delete-file mu4e-reindex-request-file)
+      (setq mu4e-reindex-request--file-just-deleted t)
+      (mu4e-reindex-maybe t))))
 
-  (defun mu4e-reindex-maybe (&optional new-request)
-    "Run `mu4e~proc-index' if it's been more than
+(defun mu4e-reindex-maybe (&optional new-request)
+  "Run `mu4e--server-index' if it's been more than
 `mu4e-reindex-request-min-seperation'seconds since the last request,"
-    (let ((time-since-last-request (- (float-time)
-                                      mu4e-reindex-request--last-time)))
+  (let ((time-since-last-request (- (float-time)
+                                    mu4e-reindex-request--last-time)))
+    (when new-request
+      (setq mu4e-reindex-request--last-time (float-time)))
+    (if (> time-since-last-request mu4e-reindex-request-min-seperation)
+        (mu4e--server-index nil t)
       (when new-request
-        (setq mu4e-reindex-request--last-time (float-time)))
-      (if (> time-since-last-request mu4e-reindex-request-min-seperation)
-          (mu4e~proc-index nil t)
-        (when new-request
-          (run-at-time (* 1.1 mu4e-reindex-request-min-seperation) nil
-                       #'mu4e-reindex-maybe)))))
+        (run-at-time (* 1.1 mu4e-reindex-request-min-seperation) nil
+                     #'mu4e-reindex-maybe)))))
 #+end_src
 
 **** Config Conversions
@@ -2012,15 +2012,14 @@ systemctl --user enable mbsync.timer --now
 *** Sending
 *** Mu4e
 This is here because of some weird ass property drawer errors
-#+begin_src emacs-lisp :noweb no-export :noweb-prefix no (if (executable-find "mu") ":tangle yes")
+#+begin_src emacs-lisp :noweb no-export :noweb-prefix no
 (after! mu4e
   <<mu4e-conf>>)
 #+end_src
 
-
 **** Viewing Mail
 :PROPERTIES:
-:header-args:emacs-lisp: :tangle no :noweb-ref mu4e-conf
+:header-args:emacs-lisp: :noweb-ref mu4e-conf
 :END:
 
 Browser good for rendering not good for email applications.
@@ -2061,7 +2060,7 @@ We'll also use a nicer alert icon or not
 #+end_src
 **** Contexts
 :PROPERTIES:
-:header-args:emacs-lisp: :tangle no :noweb-ref mu4e-conf
+:header-args:emacs-lisp: :noweb-ref mu4e-conf
 :END:
 
 These be important
@@ -2073,7 +2072,7 @@ These be important
 
 **** Sending Mail
 :PROPERTIES:
-:header-args:emacs-lisp: :tangle no :noweb-ref mu4e-conf
+:header-args:emacs-lisp: :noweb-ref mu4e-conf
 :END:
 Let's send emails too.
 #+begin_src emacs-lisp
@@ -2139,7 +2138,7 @@ We can also use this a signature,
 
 **** some visual improvements
 :PROPERTIES:
-:header-args:emacs-lisp: :tangle no :noweb-ref mu4e-conf
+:header-args:emacs-lisp: :noweb-ref mu4e-conf
 :END:
 
 just makes the icons slightly better for unicode fonts
@@ -2185,7 +2184,6 @@ The beginning of a great journey
 )
 #+end_src
 
-
 *** Basic configuration
 #+begin_src emacs-lisp
 (setq org-directory "~/Org/")
@@ -2197,6 +2195,8 @@ The beginning of a great journey
 (setq org-log-done t)
 (setq org-log-reschedule t)
 (setq org-log-into-drawer t)
+(setq org-enforce-todo-dependencies t)
+(setq org-track-ordered-property-with-tag t) ;; make it more visible that things are ordered
 (setq org-refile-allow-creating-parent-nodes t)
 ;; (setq org-archive-location "~/Org/Archive.org::datetree/* Finished Tasks")
 
@@ -2331,18 +2331,22 @@ a straight rip of the doom config
 (file+olp+datetree +org-capture-journal-file)
 "* %U %?\n%i\n%a" :prepend t)
 
+("p" "Protocol" entry (file+headline ,(concat org-directory "notes.org") "Inbox")
+        "* %^{Title}\nSource: %u, %c\n #+BEGIN_QUOTE\n%i\n#+END_QUOTE\n\n\n%?")
+("L" "Protocol Link" entry (file+headline ,(concat org-directory "notes.org") "Inbox")
+        "* %? [[%:link][%:description]] \nCaptured On: %U")
 ;; Will use {project-root}/{todo,notes,changelog}.org, unless a
 ;; {todo,notes,changelog}.org file is found in a parent directory.
 ;; Uses the basename from `+org-capture-todo-file',
 ;; `+org-capture-changelog-file' and `+org-capture-notes-file'.
-("p" "Templates for projects")
-("pt" "Project-local todo" entry  ; {project-root}/todo.org
+("P" "Templates for projects")
+("Pt" "Project-local todo" entry  ; {project-root}/todo.org
 (file+headline +org-capture-project-todo-file "Inbox")
 "* TODO %?\n%i\n%a" :prepend t)
-("pn" "Project-local notes" entry  ; {project-root}/notes.org
+("Pn" "Project-local notes" entry  ; {project-root}/notes.org
 (file+headline +org-capture-project-notes-file "Inbox")
 "* %U %?\n%i\n%a" :prepend t)
-("pc" "Project-local changelog" entry  ; {project-root}/changelog.org
+("Pc" "Project-local changelog" entry  ; {project-root}/changelog.org
 (file+headline +org-capture-project-changelog-file "Unreleased")
 "* %U %?\n%i\n%a" :prepend t)
 
